--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
@@ -1,3 +1,40 @@
-<p>
-  forgot-password-page works!
-</p>
+<mat-card>
+  <mat-card-header>
+      <mat-card-title>Update password</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="forgotPasswordForm">
+      <mat-form-field>
+        <mat-label>
+          Username
+        </mat-label>
+        <input matInput [formControl]="username">
+      </mat-form-field>
+      <!--- Password section-->
+      <mat-form-field>
+        <mat-label>
+          Password
+        </mat-label>
+        <input onkeypress="return event.charCode != 32" [type]="passwordVisible ? 'text' : 'password'" matInput [formControl]="password">
+        <mat-icon matSuffix (click)="passwordVisible = !passwordVisible">{{passwordVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error>This field is required</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>
+          Confirm password
+        </mat-label>
+        <input onkeypress="return event.charCode != 32" [type]="confirmPasswordVisible ? 'text' : 'password'" matInput [formControl]="confirmPassword">
+        <mat-icon matSuffix (click)="confirmPasswordVisible = !confirmPasswordVisible">{{passwordVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error *ngIf="confirmPassword.errors?.['required']">This field is required</mat-error>
+        <mat-error *ngIf="confirmPassword.errors?.['noMatch']">Passwords doesn't match</mat-error>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-button routerLink="..">Back</button>
+
+    <div style="width: 80%;"></div>
+
+    <button mat-button color="primary" (click)="changePassword()">Change password</button>
+  </mat-card-actions>
+</mat-card>
