--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/login-page/login-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/login-page/login-page.component.html
@@ -29,7 +29,7 @@
 
         <div style="width: 80%;"></div>
 
-        <button mat-button (click)="login()">Login</button>
+        <button mat-button color="primary" (click)="login()">Login</button>
       </mat-card-actions>
   </mat-card>
 </div>
