--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
@@ -1,21 +1,27 @@
 <mat-card>
   <mat-card-header>
-      <mat-card-title>Update password</mat-card-title>
+      <mat-card-title>Forgot password</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="forgotPasswordForm">
+    <form [formGroup]="forgotPasswordForm" *ngIf="!changePasswordVisibilityFlag">
+      <!-- Question -->
       <mat-form-field>
-        <mat-label>
-          Username
-        </mat-label>
-        <input matInput [formControl]="username">
+        <mat-label>Security question</mat-label>
+        <input matInput disabled="true" [value]="questions[0]">
       </mat-form-field>
+      <mat-form-field>
+        <mat-label>Reply</mat-label>
+        <input matInput formControlName="response"/>
+        <mat-error *ngIf="forgotPasswordForm.controls['response'].errors?.['required']">This field is required</mat-error>
+      </mat-form-field>
+    </form>
+    <form [formGroup]="changePasswordForm" *ngIf="changePasswordVisibilityFlag">
       <!--- Password section-->
       <mat-form-field>
         <mat-label>
           Password
         </mat-label>
-        <input onkeypress="return event.charCode != 32" [type]="passwordVisible ? 'text' : 'password'" matInput [formControl]="password">
+        <input onkeypress="return event.charCode != 32" [type]="passwordVisible ? 'text' : 'password'" matInput formControlName="password">
         <mat-icon matSuffix (click)="passwordVisible = !passwordVisible">{{passwordVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error>This field is required</mat-error>
       </mat-form-field>
@@ -23,18 +29,19 @@
         <mat-label>
           Confirm password
         </mat-label>
-        <input onkeypress="return event.charCode != 32" [type]="confirmPasswordVisible ? 'text' : 'password'" matInput [formControl]="confirmPassword">
-        <mat-icon matSuffix (click)="confirmPasswordVisible = !confirmPasswordVisible">{{passwordVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
-        <mat-error *ngIf="confirmPassword.errors?.['required']">This field is required</mat-error>
-        <mat-error *ngIf="confirmPassword.errors?.['noMatch']">Passwords doesn't match</mat-error>
+        <input onkeypress="return event.charCode != 32" [type]="confirmPasswordVisible ? 'text' : 'password'" matInput formControlName="confirmPassword">
+        <mat-icon matSuffix (click)="confirmPasswordVisible = !confirmPasswordVisible">{{confirmPasswordVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <mat-error *ngIf="changePasswordForm.controls['confirmPassword'].errors?.['required']">This field is required</mat-error>
+        <mat-error *ngIf="changePasswordForm.controls['confirmPassword'].errors?.['noMatch']">Passwords doesn't match</mat-error>
       </mat-form-field>
     </form>
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-button routerLink="..">Back</button>
 
-    <div style="width: 80%;"></div>
+    <div style="width: 100%;"></div>
 
-    <button mat-button color="primary" (click)="changePassword()">Change password</button>
+    <button mat-button color="primary" *ngIf="!changePasswordVisibilityFlag" (click)="answer()">Answer</button>
+    <button mat-button color="primary" *ngIf="changePasswordVisibilityFlag" (click)="changePassword()">Change password</button>
   </mat-card-actions>
 </mat-card>
