First raw version for workout plans

--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/Home/home-page/home-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/Home/home-page/home-page.component.html
@@ -1,3 +1,9 @@
-<p>
-  home-page works!
-</p>
+<app-page-structure
+  [left-menu]="leftMenu"
+>
+</app-page-structure>
+
+<ng-template #leftMenu>
+  <app-left-menu/>
+</ng-template>
+
