Added user data change and show

--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/Components/header/header.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/Components/header/header.component.html
@@ -1,9 +1,8 @@
 <mat-toolbar class="header">
-  <span>LiftBuddy</span>
-  <span class="spacer"></span>
-  <button *ngIf="!isLoggedIn" mat-button routerLink="../login">Login</button>
-  <button *ngIf="isLoggedIn" mat-button (click)="logout()">
+  <span class="col-11">LiftBuddy</span>
+  <button class="col-1" *ngIf="!isLoggedIn" mat-button routerLink="../login">Login</button>
+  <button class="col-1" *ngIf="isLoggedIn" mat-button (click)="logout()">
     <i class="fa fa-sign-out"></i>
-    Welcome {{usernameLoggedIn}}
+    Logout
   </button>
 </mat-toolbar>
