--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/create-update-workoutplan-page/Components/daily-workout/Components/exercise-row/exercise-row.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/create-update-workoutplan-page/Components/daily-workout/Components/exercise-row/exercise-row.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="exerciseForm" class="row g-3" (onChange)="updateExercise()">
+<form [formGroup]="exerciseForm" class="row" (onChange)="updateExercise()">
   <div class="col-1">
     <mat-form-field>
       <input readonly="true" [value]="(index ?? 0) + 1" matInput/>
