Added PR section and UserData section and progress on workout plans

--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/your-workouts-page/your-workouts-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/your-workouts-page/your-workouts-page.component.html
@@ -4,7 +4,7 @@
       Today
     </mat-card-title>
     <mat-card-content>
-
+      <p>{{dailyWorkouts | json}}</p>
     </mat-card-content>
   </mat-card>
   <mat-card class="row flex-grow-1">
