--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/create-update-workoutplan-page/create-update-workoutplan-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/WorkoutPlans/Components/create-update-workoutplan-page/create-update-workoutplan-page.component.html
@@ -4,8 +4,8 @@
       <div class="row mt-3">
         <div class="col-6">
           <mat-form-field>
-            <mat-label *ngIf="workschedule?.id != undefined ? false : true">Workout plan name</mat-label>
-            <input [readonly]="workschedule?.id == undefined ? false : true" [value]="workschedule?.id != undefined ? 'Workout plan with id ' + workschedule?.id : ''" matInput/>
+            <mat-label>Workout plan name</mat-label>
+            <input formControlName="name" matInput/>
           </mat-form-field>
         </div>
         <div class="col-6">
