--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-exercise/pr-exercise.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-exercise/pr-exercise.component.html
@@ -3,27 +3,29 @@
     <div class="col-1">
       <mat-form-field>
         <mat-label>Index</mat-label>
-        <input matInput [value]="index">
+        <input matInput [value]="index" />
       </mat-form-field>
     </div>
     <div class="col-5">
       <mat-form-field>
-        <mat-label>Exercize name</mat-label>
-        <input matInput formControlName="name">
+        <mat-label>exercise name</mat-label>
+        <input matInput formControlName="name" />
       </mat-form-field>
     </div>
-    <!-- Weight exercize type -->
+    <!-- Weight exercise type -->
     <div class="col-4">
       <mat-form-field>
         <mat-label>Weight</mat-label>
-        <input matInput formControlName="weight">
+        <input matInput formControlName="weight" />
       </mat-form-field>
     </div>
     <div class="col-2">
       <mat-form-field>
         <mat-label>Unit of measure</mat-label>
         <mat-select formControlName="unitOfMeasure">
-          <mat-option [value]="uom" *ngFor="let uom of UOMs">{{uom}}</mat-option>
+          <mat-option [value]="uom" *ngFor="let uom of UOMs">{{
+            uom
+          }}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
