--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-menu/pr-menu.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-menu/pr-menu.component.html
@@ -1,9 +1,8 @@
-
 <div class="container">
   <div class="row">
-    <button mat-button (click)="addExercize()">
+    <button mat-button (click)="addexercise()">
       <i class="fa fa-plus"></i>
-      <span>Add exercize</span>
+      <span>Add exercise</span>
     </button>
     <button mat-button (click)="save()">
       <i class="fa fa-save"></i>
