aggiustati DTO e chiamate api frontend

--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-menu/pr-menu.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/Components/pr-menu/pr-menu.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <button mat-button (click)="addexercise()">
+    <button mat-button (click)="addExercise()">
       <i class="fa fa-plus"></i>
       <span>Add exercise</span>
     </button>
