--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/login/Components/forgot-password-page/forgot-password-page.component.html
@@ -10,7 +10,11 @@
       <!-- Question -->
       <mat-form-field>
         <mat-label>Security question</mat-label>
-        <input matInput readonly="true" [value]="questions[0]" />
+        <input
+          matInput
+          readonly="true"
+          [value]="securityQuestions[0].question"
+        />
       </mat-form-field>
       <mat-form-field>
         <mat-label>Reply</mat-label>
