--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/Settings/Components/general-settings/general-settings.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/Settings/Components/general-settings/general-settings.component.html
@@ -1,8 +1,20 @@
-<form class="mt-3" [formGroup]="generalSettingsForm">
-  <div class="row">
-    <mat-form-field class="col-10" >
-      <input class="col-7" readonly="true" matInput [value]="'Unit of measure: ' + (generalSettingsForm.controls['UOM'].value ? 'KG' : 'LB')"/>
-    </mat-form-field>
-    <mat-slide-toggle class="col-2" formControlName="UOM"></mat-slide-toggle>
+<app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
+
+<form *ngIf="!isLoading" class="mt-3" [formGroup]="generalSettingsForm">
+  <app-setting-row
+    label="Change language"
+    [formControl]="getFormControl('language')"
+    [options]="languages"
+    [doesLoading]="true"
+    [default]="language"
+  ></app-setting-row>
+  <app-setting-row
+    label="Change unit of measure"
+    [formControl]="getFormControl('UOM')"
+    [options]="UOMs"
+    [default]="'kg'"
+  ></app-setting-row>
+  <div class="text-center">
+    <button class="col-7 p-3" mat-raised-button color="warn" (click)="swapRole()">Swap to {{isTrainer ? 'athlete' : 'trainer'}}</button>
   </div>
 </form>
