fixed pr service

--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/pr.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/PersonalRecords/pr.component.html
@@ -27,5 +27,5 @@
 </ng-template>
 
 <ng-template #rightMenu>
-  <app-pr-menu (onAddExercise)="addExercise()" (onSave)="add()"></app-pr-menu>
+  <app-pr-menu (onAddExercise)="addExercise()" (onSave)="save()"></app-pr-menu>
 </ng-template>
