--- a/Lift.Buddy.UI/ClientApp/src/app/Pages/Settings/Components/general-settings/general-settings.component.html
+++ b/Lift.Buddy.UI/ClientApp/src/app/Pages/Settings/Components/general-settings/general-settings.component.html
@@ -1,20 +1,35 @@
 <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
+<div class="settings grid">
+  <h1>General settings</h1>
+  <form *ngIf="!isLoading" class="mt-3" [formGroup]="generalSettingsForm">
+    <app-setting-row
+      label="Change language"
+      [formControl]="getFormControl('language')"
+      [options]="languages"
+      [doesLoading]="true"
+      [default]="language"
+    ></app-setting-row>
+    <app-setting-row
+      label="Change unit of measure"
+      [formControl]="getFormControl('UOM')"
+      [options]="UOMs"
+      [default]="'kg'"
+    ></app-setting-row>
+    <div class="text-center">
+      <button class="col-7 p-3" mat-raised-button color="warn" (click)="swapRole()">Swap to {{isTrainer ? 'athlete' : 'trainer'}}</button>
+    </div>
+    <div class="text-center mt-3">
+      <button class="col-7 p-3" mat-raised-button color="primary" (click)="1+1">
+        <img height="100%" width="5%" src="../../../../../assets/BuyMeACoffeeLogo.png">
+        Buy me a beer
+      </button>
+    </div>
+  </form>
 
-<form *ngIf="!isLoading" class="mt-3" [formGroup]="generalSettingsForm">
-  <app-setting-row
-    label="Change language"
-    [formControl]="getFormControl('language')"
-    [options]="languages"
-    [doesLoading]="true"
-    [default]="language"
-  ></app-setting-row>
-  <app-setting-row
-    label="Change unit of measure"
-    [formControl]="getFormControl('UOM')"
-    [options]="UOMs"
-    [default]="'kg'"
-  ></app-setting-row>
-  <div class="text-center">
-    <button class="col-7 p-3" mat-raised-button color="warn" (click)="swapRole()">Swap to {{isTrainer ? 'athlete' : 'trainer'}}</button>
-  </div>
-</form>
+</div>
+<div class="footer-buttons row">
+  <div class="col-1"></div>
+  <button class="col-3 p-3" mat-raised-button (click)="reset()">Reset</button>
+  <div class="col-4"></div>
+  <button class="col-3 p-3" mat-raised-button color="primary" (click)="save()">Save</button>
+</div>
